Map no longer goes off screen due to event links
[#152059885]

--- a/windycityswing/web/src/less/event/event.less
+++ b/windycityswing/web/src/less/event/event.less
@@ -65,11 +65,6 @@
     height: 75pt;
 }
 
-.event-details__links {
-    display: flex;
-    flex-direction: row;
-}
-
 .event-details__link {
     font-size: 10pt;
     font-weight: bold;
@@ -78,9 +73,9 @@
     width: 100pt;
     padding: 10pt;
     text-align: center;
-    margin-right: 10pt;
-    margin-bottom: 2pt;
-    display: flex;
+    margin-right: 5pt;
+    margin-bottom: 5pt;
+    display: inline-flex;
     flex-direction: horizontal;
     justify-content: space-between;
     text-decoration: none;
